[package]
name = "notify-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-web-httpauth = "0.8.2"
clap = { version = "4.5.21", features = ["derive"] }
futures = "0.3.31"
reqwest = { version = "0.12.9", features = ["json"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
strfmt = "0.2.4"
tklog = "0.2.7"
tokio = { version = "1.41.1", features = ["full"] }

[profile.release]
strip = true
lto = true
incremental = true
